<resources>
    <string name="app_name">Project01</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="defaultProximityLabel">Proximity!</string>
    <string name="number_of_guesses">Number of Guesses:</string>
    <string name="guessButtonLabel">Guess!</string>
    <string name="quitButtonLabel">Quit</string>
    <string name="game_over">Game Over!</string>
    <string name="guess">Guess!</string>
    <string name="connect_4">Connect 4</string>
    <string name="hangman">Hangman</string>
    <string name="hotter_colder">Hotter / Colder</string>
    <string name="tic_tac_toe">Tic Tac Toe</string>
    <string name="set_names">Set Names</string>
    <string name="reset_score">Reset Score</string>
    <string name="player_1_name">Player 1 Name</string>
    <string name="player_1">Player 1</string>
    <string name="player_2_name">Player 2 Name</string>
    <string name="player_2">Player 2</string>
</resources>
