<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="csc214.project01.Games.HotterColder.HotterColderFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical"
            android:gravity="center_horizontal">

        <TextView
            android:id="@+id/guessProximityLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/defaultProximityLabel"
            android:textSize="32sp"
            />

        <TextView
            android:id="@+id/guessNumLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="20dp"
            android:text="@string/number_of_guesses"/>

        <EditText
            android:id="@+id/guessInput"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="number"/>

        <Button
            android:id="@+id/guessButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/guessButtonLabel"/>
        </LinearLayout>


    </RelativeLayout>

</FrameLayout>
