<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_set_names"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="csc214.project01.SetNamesActivity">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:background="@android:drawable/dialog_holo_light_frame"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/player_1_name"
                style="?android:attr/listSeparatorTextViewStyle" />
            <EditText
                android:id="@+id/playerOneNameEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/player_1"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/player_2_name"
                style="?android:attr/listSeparatorTextViewStyle" />
            <EditText
                android:id="@+id/playerTwoNameEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/player_2"/>
        </LinearLayout>


        <!--
        Linear Layout for the Save/cancel buttons
        -->
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/cancelButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@android:string/cancel"/>

            <Button
                android:id="@+id/confirmButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@android:string/ok"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
